tests/agl/rejections/type/field_directed_name_collision.agl
enum Flag
  | on
  | off

enum Packet
  | packet(on: Flag)

let item = packet(on = Flag::on)
case item of
  | packet(on) => 1
  | packet(_) => 0
